tests/invalid/bool_op_type_mismatch/main.py
x: bool = True
y: int = 1
z: bool = x and y
